--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -5,11 +5,11 @@ pipeline:
       - python3 -m unittest discover test -v
   ecr_build:
     image: plugins/ecr
+    environment:
+      - ECR_ACCESS_KEY=${aws_access_key}
+      - ECR_SECRET_KEY=${aws_secret_key}
+    secrets: [aws_access_key, aws_secret_key]
     settings:
-      access_key:
-        from_secret: aws_access_key
-      secret_key:
-        from_secret: aws_secret_key
       repo: streamlinkweb
       registry:
         from_secret: aws_ecr_registry_url
