--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -8,7 +8,6 @@ pipeline:
     environment:
       - ECR_ACCESS_KEY=${aws_access_key}
       - ECR_SECRET_KEY=${aws_secret_key}
-    secrets: [aws_access_key, aws_secret_key]
     repo: streamlinkweb
-    registry:
-      from_secret: aws_ecr_registry_url
+    registry: ${aws_ecr_registry_url}
+    secrets: [aws_access_key, aws_secret_key, aws_ecr_registry_url]
