Messing with CI K8

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -11,3 +11,10 @@ pipeline:
     repo: streamlinkweb
     registry: ${aws_ecr_registry_url}
     secrets: [aws_access_key, aws_secret_key, aws_ecr_registry_url]
+  k8_deploy:
+    image: ghcr.io/bh90210/dron8s:latest
+    settings:
+      template: streamlinkweb-deployment.yaml
+      ca: ${kubernetes_cert}
+      server: ${kubernetes_server}
+      token: ${kubernetes_token}
