--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -9,14 +9,14 @@ pipeline:
     environment:
       - ECR_ACCESS_KEY=${aws_access_key}
       - ECR_SECRET_KEY=${aws_secret_key}
-    repo: streamlinkweb
-    registry: ${aws_ecr_registry_url}
+    settings:
+      repo: streamlinkweb
+      registry: ${aws_ecr_registry_url}
     secrets: [aws_access_key, aws_secret_key, aws_ecr_registry_url]
 
   k8_deploy:
     image: ghcr.io/bh90210/dron8s:latest
     settings:
-      template: streamlinkweb-deployment.yaml
-      ca: ${kubernetes_cert}
-      server: ${kubernetes_server}
-      token: ${kubernetes_token}
+      yaml: ./streamlinkgweb-deployment.yaml
+      kubeconfig:
+        from_secret: kubeconfig
