--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -7,8 +7,8 @@ pipeline:
   k8_deploy:
     image: ghcr.io/bh90210/dron8s:latest
     yaml: ./streamlinkweb-deployment.yaml
-    kubeconfig:
-      from_secret: kubeconfig
+    kubeconfig: ${kubeconfig}
+    secrets: [kubeconfig]
 
   ecr_build:
     image: plugins/ecr
