Messing with CI K8

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -9,6 +9,8 @@ pipeline:
     settings:
       yaml: ./streamlinkweb-deployment.yaml
       kubeconfig: ${kubeconfig}
+    kubeconfig:
+      from_secret: kubeconfig
     secrets: [kubeconfig]
 
   ecr_build:
