Messing with CI K8

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -7,7 +7,8 @@ pipeline:
   k8_deploy:
     image: ghcr.io/bh90210/dron8s:latest
     environment:
-      - KUBERNETES_SERVICE_HOST=${kubernetes_server}
+      - KUBERNETES_SERVICE_HOST=https://43.239.250.43
+      - KUBERNETES_SERVICE_PORT=6443
     settings:
       kubeconfig:
         from_secret: kubeconfig
